@@ -1,5 +1,7 @@
-<span class="badge text-bg-secondary id-badge" data-bs-toggle="tooltip" data-placement="top" title="{% if externalId is not null %}External ID: {{ externalId }}, {% endif %}Internal ID: {{ idPrefix }}{{ id }}">
-    {% if externalId is not null %}
+<span class="badge text-bg-secondary id-badge" data-bs-toggle="tooltip" data-placement="top" title="{% if label is defined and label %}Label: {{ label }}, {% endif %}{% if externalId is not null %}External ID: {{ externalId }}, {% endif %}Internal ID: {{ idPrefix }}{{ id }}">
+    {% if label is defined and label %}
+        {{ label }}
+    {% elseif externalId is not null %}
         {{ externalId }}
     {% else %}
         {{ idPrefix }}{{ id }}
