@@ -5,6 +5,7 @@
             {{ form_row(form.externalid) }}
         {% endif %}
         {{ form_row(form.icpcid) }}
+        {{ form_row(form.label) }}
         {{ form_row(form.name) }}
         {{ form_row(form.displayName) }}
         {{ form_row(form.category) }}
